force-app/main/default/objects/Facility__c/Facility__c.object-meta.xml
<CustomObject>
    <label>Facility</label>
    <nameField>
        <label>Facility ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>