force-app/main/default/objects/Facility__c/fields/Current_Occupancy__c.field-meta.xml
<CustomField>
    <fullName>Current_Occupancy__c</fullName>
    <inlineHelpText>Current number of employees assigned to facility</inlineHelpText>
    <label>Current Occupancy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>