force-app/main/default/objects/Facility__c/fields/Directions__c.field-meta.xml
<CustomField>
    <fullName>Directions__c</fullName>
    <label>Directions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>