force-app/main/default/objects/Facility__c/fields/Entry_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Entry_Requirements__c</fullName>
    <label>Entry Requirements</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>