force-app/main/default/objects/Facility__c/fields/Facility_Manager__c.field-meta.xml
<CustomField>
    <fullName>Facility_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This person is responsible for the facility day-to-day operation.</inlineHelpText>
    <label>Facility Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Manager for Facilities</relationshipLabel>
    <relationshipName>Facilities</relationshipName>
    <type>Lookup</type>
</CustomField>