force-app/main/default/objects/Facility__c/fields/Facility_Name__c.field-meta.xml
<CustomField>
    <fullName>Facility_Name__c</fullName>
    <label>Facility Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>