force-app/main/default/objects/Facility__c/fields/Facility_Status__c.field-meta.xml
<CustomField>
    <fullName>Facility_Status__c</fullName>
    <label>Facility Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>