force-app/main/default/objects/Facility__c/fields/Facility_Status_Narrative__c.field-meta.xml
<CustomField>
    <fullName>Facility_Status_Narrative__c</fullName>
    <formula>&quot;The &quot; &amp;  Facility_Name__c &amp; &quot; (&quot; &amp; Name &amp; &quot;) office is &quot; &amp; UPPER( TEXT(Facility_Status__c)) &amp; &quot; (Updated &quot; &amp;  TEXT(DATEVALUE(LastModifiedDate))  &amp; &quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facility Status Narrative</label>
    <type>Text</type>
</CustomField>