force-app/main/default/objects/Facility__c/fields/Max_Occupancy__c.field-meta.xml
<CustomField>
    <fullName>Max_Occupancy__c</fullName>
    <label>Max Occupancy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>