force-app/main/default/objects/Facility__c/fields/Number_of_Rooms__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Rooms__c</fullName>
    <label>Number of Rooms</label>
    <summaryForeignKey>Room__c.Facility__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>