force-app/main/default/objects/Facility__c/fields/Office_Hours__c.field-meta.xml
<CustomField>
    <fullName>Office_Hours__c</fullName>
    <label>Office Hours</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>