force-app/main/default/objects/Facility__c/fields/Parking__c.field-meta.xml
<CustomField>
    <fullName>Parking__c</fullName>
    <label>Parking</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>