force-app/main/default/objects/Facility__c/fields/Person_In_Charge__c.field-meta.xml
<CustomField>
    <fullName>Person_In_Charge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used for Person In Charge</description>
    <inlineHelpText>This person is responsible for leading the facility and making strategic decisions. Should this person not be able to fulfill their obligations (i.e. sick), the Orders of Succession will identify the next Person In Charge.</inlineHelpText>
    <label>Person In Charge</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Facilities (Person In Charge)</relationshipLabel>
    <relationshipName>Facilities1</relationshipName>
    <type>Lookup</type>
</CustomField>