force-app/main/default/objects/Facility__c/fields/Photo__c.field-meta.xml
<CustomField>
    <fullName>Photo__c</fullName>
    <formula>IF(ISBLANK(Photo_URL__c), &quot;&quot;, IMAGE(Photo_URL__c, Facility_Name__c))</formula>
    <label>Photo</label>
    <type>Text</type>
</CustomField>